// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineToolTipContent renders correctly against snapshot 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <span
      class="euiBadge emotion-euiBadge-hollow"
      title="Source"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-column"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              Source
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-center-center-column"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            color="subdued"
            data-euiicon-type="arrowRight"
            data-test-subj="arrow-icon"
          />
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            color="subdued"
            data-euiicon-type="arrowLeft"
            data-test-subj="arrow-icon"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <span
      class="euiBadge emotion-euiBadge-hollow"
      title="Destination"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              Destination
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`LineToolTipContent renders correctly against snapshot when rendering client & server 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <span
      class="euiBadge emotion-euiBadge-hollow"
      title="Client"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-column"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              Client
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-center-center-column"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            color="subdued"
            data-euiicon-type="arrowRight"
            data-test-subj="arrow-icon"
          />
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-none-center-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            color="subdued"
            data-euiicon-type="arrowLeft"
            data-test-subj="arrow-icon"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="css-6tzz5h"
            height="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <span
      class="euiBadge emotion-euiBadge-hollow"
      title="Server"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              Server
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
</div>
`;
